[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "book_recommender_system"
version = "0.0.1"
description = "This is a recommendation system for books using machine learning techniques"
authors = [
  { name = "O.Zayed" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["book_recommender_system"]
include = ["pyproject.toml", "book_recommender_system/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["book_recommender_system"]
force-sort-within-sections = true

